# django-intenumfield

./: .flake8  .gitignore  .isort.cfg  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
django_intenum/: __init__.py
tests/: models.py  settings.py  test_main.py
