[tool.poetry]
name = "django-intenumfield"
version = "2.0.0"
description = "An IntEnumField for Django"
authors = [
    "Jerome Leclanche <jerome@leclan.ch>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HearthSim/django-intenumfield"
keywords = ["django", "intenum"]
packages = [{ include = "django_intenum" }]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=2.2"

[tool.poetry.dev-dependencies]
flake8 = "==3.7.5"
flake8-isort = "==2.7.0"
flake8-quotes = "==1.0.0"
isort = "==4.3.21"
pytest = "==6.2.5"
pytest-django = "==4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
