[metadata]
name = django-intenumfield
version = 1.1
description = An IntEnumField for Django
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/django-intenumfield/
download_url = https://github.com/HearthSim/django-intenumfield/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 1.11
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = django_intenum
install_requires = Django>=1.11

[bdist_wheel]
universal = 1
